nu med lite bilder i css:en

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@
 
 #header
 {
+  background-image:url(../Pics/Diamant.png);
+  background-size:250px 250px;
+  background-position:right 4px center;
+  background-repeat: no-repeat;
   background-color: #32C7D4;
   height: 300px;
   width: 1400px;
@@ -31,7 +35,7 @@
 #Navigation
   {
   background-color: #32C7D4;
-  height: 1350px;
+  height: 800px;
   width: 150px;
   text-align:center;
   float: Left;
@@ -45,7 +49,7 @@
 #content
 {
   background-color:#B8ECF0;
-  height: 1350px;
+  height: auto;
   width: 1242px;
   text-align: left;
   float:right;
@@ -55,6 +59,10 @@
 
 #footer
 {
+  background-image:url(../Pics/Diamant.png);
+  background-size:140px 140px;
+  background-position:center 5px;
+  background-repeat: no-repeat;
   background-color: #32C7D4;
   height: 150px;
   width: 1395px;
