--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ p, ul, a
   font-family: Arial, Helvetica, sans-serif;
 }
 
-p
+p, dt
 {
   margin:0.4em;
 }
@@ -221,8 +221,27 @@ fieldset
 {
   width:400px;
 }
-#Zombiebild
+#Zombiebild img
 {
-  height:400px;
   width:200px;
+}
+#Minvideo
+{
+  width:800px;
+  height:400px;
+}
+#Minvector img
+{
+  width:200px; 
+}
+.HeaderPic
+{
+  width: 400px;
+  height: 200px;
+  margin-top: 0.6em;
+}
+
+#MobilSida
+{
+  margin-left:0.6em;
 }
